--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Set environment variables from the .env in the local environment\n",
-    "load_dotenv()\n",
+    "load_dotenv('.env')\n",
     "\n",
     "nyt_api_key = os.getenv(\"NYT_API_KEY\")\n",
     "tmdb_api_key = os.getenv(\"TMDB_API_KEY\")"
@@ -45,6 +45,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3TegG9wwEhIALBVBTYaQogBSgbqDdpxf \n",
+      " 2e2bc0c5cb142637d33f7913b3743743\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check which API keys were used\n",
+    "print(f\"{nyt_api_key} \\n {tmdb_api_key}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +86,27 @@
     "begin_date = \"20130101\"\n",
     "end_date = \"20230531\"\n",
     "\n",
-    "# Build URL\n"
+    "# Build URL\n",
+    "query_url = f\"{url}fq={filter_query}&begin_date={begin_date}&end_date={end_date}&sort={sort}&fl={field_list}&api-key={nyt_api_key}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#verify that response code is not an error, looking for <response [200]>\n",
+    "response_data = requests.get(query_url)\n",
+    "print(response_data)"
    ]
   },
   {
@@ -104,28 +143,39 @@
    ],
    "source": [
     "# Create an empty list to store the reviews\n",
-    "\n",
+    "articles_list = []\n",
     "\n",
     "# loop through pages 0-19\n",
-    "\n",
+    "for page in range(0, 20):\n",
     "    # create query with a page number\n",
     "    # API results show 10 articles at a time\n",
-    "\n",
-    "    \n",
+    "    query_url = f\"{url}fq={filter_query}&begin_date={begin_date}&end_date={end_date}&sort={sort}&fl={field_list}&api-key={nyt_api_key}\"\n",
+    "    query_url = f\"{query_url}&page={str(page)}\"\n",
     "    # Make a \"GET\" request and retrieve the JSON\n",
-    "\n",
+    "    articles = requests.get(query_url).json()\n",
     "    \n",
     "    # Add a twelve second interval between queries to stay within API query limits\n",
-    "\n",
+    "    time.sleep(12)\n",
     "    \n",
     "    # Try and save the reviews to the reviews_list\n",
-    "\n",
+    "    for article in articles[\"response\"][\"docs\"]:\n",
     "        # loop through the reviews[\"response\"][\"docs\"] and append each review to the list\n",
-    "\n",
+    "        articles_list.append(article)\n",
     "        # Print the page that was just retrieved\n",
     "\n",
     "\n",
     "        # Print the page number that had no results then break from the loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See resulting headlines\n",
+    "for article in articles_list:\n",
+    "    print(article[\"headline\"])"
    ]
   },
   {
@@ -440,7 +490,11 @@
    ],
    "source": [
     "# Preview the first 5 results in JSON format\n",
-    "# Use json.dumps with argument indent=4 to format data\n"
+    "# Use json.dumps with argument indent=4 to format data\n",
+    "# can't use .head() in this instance, because .head() is a panda function that works with dataframes,\n",
+    "# but this data is not in a dataframe, it's in a list. Also, json.dumps does not work on DataFrame objects\n",
+    "first_five = articles_list[:5]\n",
+    "print(json.dumps(first_five,indent=4))"
    ]
   },
   {
@@ -3663,7 +3717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
