--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -503,10 +503,10 @@
        "       'rank': 1}],\n",
        "     'organization': None},\n",
        "    'word_count': 306}],\n",
-       "  'meta': {'hits': 344, 'offset': 0, 'time': 19}}}"
+       "  'meta': {'hits': 344, 'offset': 0, 'time': 18}}}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "4  [{'firstname': 'Manohla', 'middlename': None, ...                None  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
        "4                        Other People’s Children  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1564,7 +1564,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract 'name' and 'value' from items in \"keywords\" column\n",
+    "def extract_keywords(keyword_list):\n",
+    "    extracted_keywords = \"\"\n",
+    "    for item in keyword_list:\n",
+    "        # Extract 'name' and 'value'\n",
+    "        keyword = f\"{item['name']}: {item['value']};\" \n",
+    "        # Append the keyword item to the extracted_keywords list\n",
+    "        extracted_keywords += keyword\n",
+    "    return extracted_keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1604,6 +1621,7 @@
        "      <th>byline.original</th>\n",
        "      <th>byline.person</th>\n",
        "      <th>byline.organization</th>\n",
+       "      <th>title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1625,6 +1643,7 @@
        "      <td>By Jeannette Catsoulis</td>\n",
        "      <td>[{'firstname': 'Jeannette', 'middlename': None...</td>\n",
        "      <td>None</td>\n",
+       "      <td>The Attachment Diaries</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1644,6 +1663,7 @@
        "      <td>By Jeannette Catsoulis</td>\n",
        "      <td>[{'firstname': 'Jeannette', 'middlename': None...</td>\n",
        "      <td>None</td>\n",
+       "      <td>What’s Love Got to Do With It?’ Probably a Lo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1663,6 +1683,7 @@
        "      <td>By Elisabeth Vincentelli</td>\n",
        "      <td>[{'firstname': 'Elisabeth', 'middlename': None...</td>\n",
        "      <td>None</td>\n",
+       "      <td>You Can Live Forever</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1682,6 +1703,7 @@
        "      <td>By Elisabeth Vincentelli</td>\n",
        "      <td>[{'firstname': 'Elisabeth', 'middlename': None...</td>\n",
        "      <td>None</td>\n",
+       "      <td>A Tourist’s Guide to Love</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1701,6 +1723,7 @@
        "      <td>By Manohla Dargis</td>\n",
        "      <td>[{'firstname': 'Manohla', 'middlename': None, ...</td>\n",
        "      <td>None</td>\n",
+       "      <td>Other People’s Children</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1756,34 +1779,31 @@
        "3          None         None         None  By Elisabeth Vincentelli   \n",
        "4          None         None         None         By Manohla Dargis   \n",
        "\n",
-       "                                       byline.person byline.organization  \n",
-       "0  [{'firstname': 'Jeannette', 'middlename': None...                None  \n",
-       "1  [{'firstname': 'Jeannette', 'middlename': None...                None  \n",
-       "2  [{'firstname': 'Elisabeth', 'middlename': None...                None  \n",
-       "3  [{'firstname': 'Elisabeth', 'middlename': None...                None  \n",
-       "4  [{'firstname': 'Manohla', 'middlename': None, ...                None  "
+       "                                       byline.person byline.organization  \\\n",
+       "0  [{'firstname': 'Jeannette', 'middlename': None...                None   \n",
+       "1  [{'firstname': 'Jeannette', 'middlename': None...                None   \n",
+       "2  [{'firstname': 'Elisabeth', 'middlename': None...                None   \n",
+       "3  [{'firstname': 'Elisabeth', 'middlename': None...                None   \n",
+       "4  [{'firstname': 'Manohla', 'middlename': None, ...                None   \n",
+       "\n",
+       "                                           title  \n",
+       "0                         The Attachment Diaries  \n",
+       "1  What’s Love Got to Do With It?’ Probably a Lo  \n",
+       "2                           You Can Live Forever  \n",
+       "3                      A Tourist’s Guide to Love  \n",
+       "4                        Other People’s Children  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract 'name' and 'value' from items in \"keywords\" column\n",
-    "def extract_keywords(keyword_list):\n",
-    "    extracted_keywords = \"\"\n",
-    "    for item in keyword_list:\n",
-    "        # Extract 'name' and 'value'\n",
-    "        keyword = f\"{item['name']}: {item['value']};\" \n",
-    "        # Append the keyword item to the extracted_keywords list\n",
-    "        extracted_keywords += keyword\n",
-    "    return extracted_keywords\n",
-    "\n",
     "# Fix the \"keywords\" column by converting cells from a list to a string\n",
-    "reviews_list_df['keywords'] = reviews_list_df['keywords'].apply(extract_keywords)\n",
-    "reviews_list_df.head()\n",
-    "\n"
+    "reviews_list_df_new = reviews_list_df\n",
+    "reviews_list_df_new['keywords'] = reviews_list_df['keywords'].apply(extract_keywords)\n",
+    "reviews_list_df_new.head()\n"
    ]
   },
   {
@@ -1795,7 +1815,11 @@
    "outputs": [],
    "source": [
     "# Create a list from the \"title\" column using to_list()\n",
-    "# These titles will be used in the query for The Movie Database\n"
+    "# These titles will be used in the query for The Movie Database\n",
+    "\n",
+    "titles = reviews_list_df[\"titles\"]\n",
+    "\n",
+    "\n"
    ]
   },
   {
