--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,10 +503,10 @@
        "       'rank': 1}],\n",
        "     'organization': None},\n",
        "    'word_count': 306}],\n",
-       "  'meta': {'hits': 344, 'offset': 0, 'time': 18}}}"
+       "  'meta': {'hits': 344, 'offset': 0, 'time': 16}}}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "4  [{'firstname': 'Manohla', 'middlename': None, ...                None  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
        "[200 rows x 17 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "4                        Other People’s Children  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -2208,7 +2208,7 @@
        " 'Kedi,’ Rekindling a ‘Love of Life']"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2233,13 +2233,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare The Movie Database query\n",
     "url = \"https://api.themoviedb.org/3/search/movie?query=\"\n",
-    "tmdb_key_string = \"&api_key=\" + tmdb_api_key"
+    "tmdb_key_string = \"&api_key=\" + tmdb_api_key\n",
+    "query_url_2 = f\"{url}{titles_list}{tmdb_api_key}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [401]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# verify that response code is not an error, looking for <response [200]>\n",
+    "response_data_2 = requests.get(query_url_2)\n",
+    "print(response_data_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2e2bc0c5cb142637d33f7913b3743743\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test to see which API keys are being used\n",
+    "# print(nyt_api_key)\n",
+    "print(tmdb_api_key)"
    ]
   },
   {
@@ -2249,10 +2288,17 @@
    "outputs": [],
    "source": [
     "# Create an empty list to store the results\n",
-    "\n",
+    "tmdb_movies_list = []\n",
     "\n",
     "# Create a request counter to sleep the requests after a multiple\n",
     "# of 50 requests\n",
+    "\n",
+    "request_counter = 1\n",
+    "for i in range(len(tmdb_movies_list)):\n",
+    "    request_counter += 1\n",
+    "    return request_counter\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# Loop through the titles\n",
