--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -2294,20 +2294,20 @@
     "# of 50 requests\n",
     "\n",
     "request_counter = 1\n",
-    "for i in range(len(tmdb_movies_list)):\n",
-    "    request_counter += 1\n",
-    "    return request_counter\n",
-    "\n",
-    "\n",
-    "\n",
+    "max_requests = 50\n",
     "\n",
     "# Loop through the titles\n",
-    "\n",
+    "for i in range(len(tmdb_movies_list)):\n",
+    "    \n",
     "    # Check if we need to sleep before making a request\n",
-    "\n",
+    "    if request_counter % max_requests == 0:\n",
+    "        time.sleep(1)\n",
+    "        print(f\"application is sleeping for 1 second\")\n",
     "\n",
     "    # Add 1 to the request counter\n",
-    "\n",
+    "    request_counter += 1\n",
+    "    return request_counter\n",
+    "    if request_counter = mod\n",
     "    \n",
     "    # Perform a \"GET\" request for The Movie Database\n",
     "\n",
