updates to notes from office hours

--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -2696,6 +2696,7 @@
     }
    ],
    "source": [
+    "\n",
     "# Create an empty list to store the results\n",
     "tmdb_movies_list = []\n",
     "movie_id = []\n",
@@ -2726,8 +2727,12 @@
     "    try:\n",
     "        query_url_3 = f\"{url3}{movie_id}?api_key={tmdb_api_key}\"\n",
     "        movie_response_all_dets = requests.get(query_url_3).json()\n",
-    "        genres.append(movie_response_all_dets['genres'][]['name'])\n",
+    "        for\n",
+    "            genres.append(movie_response_all_dets['genres']['name'])\n",
     "        \n",
+    "        for\n",
+    "        \n",
+    "        for\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"{title} - not found\")\n",
@@ -2832,24 +2837,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Comedy']"
+       "['Romance', 'Comedy']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#for loop example\n",
+    "query_url_3 = f\"{url3}828613?api_key={tmdb_api_key}\"\n",
+    "movie_response_all_dets = requests.get(query_url_3).json()\n",
+    "\n",
+    "\n",
     "genres = []\n",
-    "genres.append(movie_response_all_dets['genres'][1]['name'])\n",
+    "for genre in movie_response_all_dets[\"genres\"]:    \n",
+    "    genres.append(genre['name'])\n",
+    "\n",
     "genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Romance', 'Comedy']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list comprehension\n",
+    "[genre[\"name\"] for genre in movie_response_all_dets[\"genres\"]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adult': False,\n",
+       " 'backdrop_path': '/30COvn7g7PP58wBkrnnh7Ws9bJS.jpg',\n",
+       " 'belongs_to_collection': None,\n",
+       " 'budget': 0,\n",
+       " 'genres': [{'id': 10749, 'name': 'Romance'}, {'id': 35, 'name': 'Comedy'}],\n",
+       " 'homepage': '',\n",
+       " 'id': 828613,\n",
+       " 'imdb_id': 'tt14456350',\n",
+       " 'original_language': 'en',\n",
+       " 'original_title': 'About Fate',\n",
+       " 'overview': \"Two strangers believe in love but never seem to be able to find its true meaning. In a wild twist of events, fate puts each in the other's path on one stormy New Year's Eve.\",\n",
+       " 'popularity': 20.384,\n",
+       " 'poster_path': '/fabZkaVHYJ67KbZx7oFoitauX34.jpg',\n",
+       " 'production_companies': [{'id': 11006,\n",
+       "   'logo_path': None,\n",
+       "   'name': 'Aldamisa Entertainment',\n",
+       "   'origin_country': 'US'},\n",
+       "  {'id': 188745,\n",
+       "   'logo_path': '/iun7EGDo1Z8UkJigWhsLyO7ffF5.png',\n",
+       "   'name': 'American International Pictures (AIP)',\n",
+       "   'origin_country': 'US'},\n",
+       "  {'id': 188746,\n",
+       "   'logo_path': None,\n",
+       "   'name': 'Contentious Media',\n",
+       "   'origin_country': 'US'},\n",
+       "  {'id': 17929,\n",
+       "   'logo_path': None,\n",
+       "   'name': 'Vincent Newman Entertainment',\n",
+       "   'origin_country': 'US'}],\n",
+       " 'production_countries': [{'iso_3166_1': 'US',\n",
+       "   'name': 'United States of America'}],\n",
+       " 'release_date': '2022-09-08',\n",
+       " 'revenue': 0,\n",
+       " 'runtime': 100,\n",
+       " 'spoken_languages': [{'english_name': 'English',\n",
+       "   'iso_639_1': 'en',\n",
+       "   'name': 'English'}],\n",
+       " 'status': 'Released',\n",
+       " 'tagline': 'Love appears where you least expect it.',\n",
+       " 'title': 'About Fate',\n",
+       " 'video': False,\n",
+       " 'vote_average': 7.447,\n",
+       " 'vote_count': 276}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_response_all_dets"
    ]
   },
   {
