for loops section 2

--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,10 +503,10 @@
        "       'rank': 1}],\n",
        "     'organization': None},\n",
        "    'word_count': 306}],\n",
-       "  'meta': {'hits': 344, 'offset': 0, 'time': 17}}}"
+       "  'meta': {'hits': 344, 'offset': 0, 'time': 18}}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "4  [{'firstname': 'Manohla', 'middlename': None, ...                None  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
        "[200 rows x 17 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "4                        Other People’s Children  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -2208,7 +2208,7 @@
        " 'Kedi,’ Rekindling a ‘Love of Life']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2656,42 +2656,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tmdb_movies_list = []\n",
-    "\n",
-    "# for title in titles_list:\n",
-    "#     query_url_2 = f\"{url2}{title}{tmdb_key_string}\"\n",
-    "#     responses = requests.get(query_url_2).json()\n",
-    "    \n",
-    "#     tmdb_movies_list.append(title)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "application is sleeping for 1 second after 50 requests\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\mered\\OneDrive\\Documents\\AI_Bootcamp\\1_DataClass\\data-sourcing-challenge\\retrieve_movie_data.ipynb Cell 22\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mered/OneDrive/Documents/AI_Bootcamp/1_DataClass/data-sourcing-challenge/retrieve_movie_data.ipynb#X51sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     query_url_2 \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00murl2\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mtitle\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mtmdb_key_string\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mered/OneDrive/Documents/AI_Bootcamp/1_DataClass/data-sourcing-challenge/retrieve_movie_data.ipynb#X51sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     movie_response \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39mget(query_url_2)\u001b[39m.\u001b[39mjson()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/mered/OneDrive/Documents/AI_Bootcamp/1_DataClass/data-sourcing-challenge/retrieve_movie_data.ipynb#X51sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     movie_id\u001b[39m.\u001b[39mappend(movie_response[\u001b[39m'\u001b[39m\u001b[39mresults\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m0\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mid\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mered/OneDrive/Documents/AI_Bootcamp/1_DataClass/data-sourcing-challenge/retrieve_movie_data.ipynb#X51sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mered/OneDrive/Documents/AI_Bootcamp/1_DataClass/data-sourcing-challenge/retrieve_movie_data.ipynb#X51sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     query_url_3 \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00murl3\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mmovie_id\u001b[39m}\u001b[39;00m\u001b[39m?api_key=\u001b[39m\u001b[39m{\u001b[39;00mtmdb_api_key\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "What’s Love Got to Do With It?’ Probably a Lo - not found\n",
+      "application is sleeping for 1 second after 50 requests\n",
+      "Aulcie - not found\n",
+      "application is sleeping for 1 second after 100 requests\n",
+      "They’ll Love Me When I’m Dead’ Documents Orson Welles’s Last Fil - not found\n",
+      "Burning,’ Love Ignites a Divided Worl - not found\n",
+      "After Everything,’ a Young Love Blooms in Crisi - not found\n",
+      "Quincy’ Captures a Lifelong Love Affair With Musi - not found\n",
+      "Love, Gilda,’ a Portrait of a Brief and Brilliant Caree - not found\n",
+      "Tea With the Dames,’ Four Legends Dish on Acting and Lov - not found\n",
+      "Bel Canto,’ Music Is the Food of Love and Rebellio - not found\n",
+      "application is sleeping for 1 second after 150 requests\n",
+      "The Citizen,’ an Immigrant Picks a Bad Time to Fall in Lov - not found\n",
+      "Love, Cecil,’ an Aesthete Ahead of His Tim - not found\n",
+      "Rogers Park,’ Life and Love in a Chicago Neighborhoo - not found\n",
+      "Submergence,’ a Love Story Sunk by Geopolitic - not found\n",
+      "Love After Love,’ an Unflinching Look at Extended Grie - not found\n",
+      "Love, Simon,’ a Glossy Teen Romance, the Hero Has a Secre - not found\n",
+      "Keep the Change,’ Two People With Autism Find Lov - not found\n",
+      "The Housemaid,’ Twisted Love and Angry Ghosts in Vietna - not found\n",
+      "Forever My Girl,’ a Romance Resumes After a Long Brea - not found\n",
+      "Kangaroo: A Love-Hate Story’ Exposes a Wildlife Massacr - not found\n",
+      "Youth,’ the People’s Dance Troupe, in Love and Wa - not found\n",
+      "Killing for Love’ Revisits a Virginia Murder Cas - not found\n",
+      "The Shape of Water’ Is Altogether Wonderfu - not found\n",
+      "Love Beats Rhymes,’ a Hip-Hop Artist Transformed by Poetr - not found\n",
+      "Cuba and the Cameraman’ Lavishes Love on a Country … and Castr - not found\n",
+      "On the Beach at Night Alone’ Zooms in on a Love Affai - not found\n",
+      "Thelma,’ a Woman in Love Can Burn Down the Worl - not found\n",
+      "Hello Again,’ a Movie Musical Ode to Love and Lust Over Decade - not found\n",
+      "It Happened in L.A.,’ All That Questing After Lov - not found\n",
+      "Dina,’ a Differently Abled Love Stor - not found\n",
+      "Woodpeckers,’ a Tale of Love and Agonizing Penal Confinemen - not found\n",
+      "I Do ... Until I Don’t,’ Love and Loathing in Florid - not found\n",
+      "Tales of an Immoral Couple’: Love Means Having to Grow U - not found\n",
+      "After Love’ and Regretting Every Momen - not found\n",
+      "Women Who Kill,’ and May Be in Love With On - not found\n",
+      "False Confessions,’ the Play’s Not Quite the Thin - not found\n",
+      "Review: Those Movies, Himself — Bertrand Tavernier’s Tour of French Cinem - not found\n",
+      "The Big Sick,’ Comedy Is Hard, Love Harde - not found\n",
+      "Vincent N Roxxy,’ Love Is in the Air, N So Is Fea - not found\n",
+      "Everything, Everything’ Pits Love Against Diseas - not found\n",
+      "Hounds of Love’ Is Tense and Deadly Down Unde - not found\n",
+      "Harold and Lillian’ Introduces a Hollywood Power Coupl - not found\n",
+      "The Happiest Day in the Life of Olli Maki,’ Love and Life on the Rope - not found\n",
+      "The Promise’ Finds a Love Triangle in Constantinopl - not found\n",
+      "Frantz,’ a Mysterious Frenchman and the Wounds of Wa - not found\n",
+      "Everybody Loves Somebody,’ a Rom-Com With Bit - not found\n",
+      "application is sleeping for 1 second after 200 requests\n",
+      "Kedi,’ Rekindling a ‘Love of Life - not found\n"
      ]
     }
    ],
@@ -2699,10 +2720,7 @@
     "\n",
     "# Create an empty list to store the results\n",
     "tmdb_movies_list = []\n",
-    "movie_id = []\n",
-    "genres = []\n",
-    "spoken_languages = []\n",
-    "production_countries = []\n",
+    "\n",
     "\n",
     "# Create a request counter to sleep the requests after a multiple\n",
     "# of 50 requests\n",
@@ -2712,28 +2730,37 @@
     "\n",
     "for title in titles_list:\n",
     "# Loop through the titles\n",
-    "#for i in range(len(tmdb_movies_list)):\n",
-    "    \n",
+    "\n",
     "    # Check if we need to sleep before making a request\n",
     "    if request_counter % max_requests == 0:\n",
     "        time.sleep(1)\n",
     "        print(f\"application is sleeping for 1 second after {request_counter} requests\")\n",
     "        \n",
+    "    try:\n",
+    "        movie_id = []\n",
     "        # Perform a \"GET\" request for The Movie Database\n",
+    "        \n",
     "        query_url_2 = f\"{url2}{title}{tmdb_key_string}\"\n",
     "        movie_response = requests.get(query_url_2).json()\n",
     "        movie_id.append(movie_response['results'][0]['id'])\n",
-    "\n",
-    "    try:\n",
-    "        query_url_3 = f\"{url3}{movie_id}?api_key={tmdb_api_key}\"\n",
-    "        movie_response_all_dets = requests.get(query_url_3).json()\n",
-    "        for\n",
-    "            genres.append(movie_response_all_dets['genres']['name'])\n",
     "        \n",
-    "        for\n",
+    "        for id in movie_id:\n",
+    "            query_url_3 = f\"{url3}{id}?api_key={tmdb_api_key}\"\n",
+    "            movie_response_all = requests.get(query_url_3).json()\n",
+    "            \n",
     "        \n",
-    "        for\n",
+    "            genres = []\n",
+    "            for genre in movie_response_all[\"genres\"]:    \n",
+    "                genres.append(genre['name'])\n",
     "        \n",
+    "            spoken_languages = []\n",
+    "            for spoken_lang in movie_response_all[\"spoken_languages\"]:\n",
+    "                spoken_languages.append(spoken_lang['english_name'])\n",
+    "            \n",
+    "            production_countries = []\n",
+    "            for country in movie_response_all[\"production_countries\"]:\n",
+    "                production_countries.append(country['name'])\n",
+    "    \n",
     "    except Exception as e:\n",
     "        print(f\"{title} - not found\")\n",
     "\n",
@@ -2746,7 +2773,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Thai']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spoken_languages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2837,20 +2884,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Romance', 'Comedy']"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#for loop example\n",
     "query_url_3 = f\"{url3}828613?api_key={tmdb_api_key}\"\n",
@@ -2866,20 +2902,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Romance', 'Comedy']"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "spoken_languages = []\n",
+    "for spoken_languages in movie_response_all_dets[\"spoken_languages\"]:\n",
+    "    spoken_languages.append(spoken_languages['spoken_languages']['name'])\n",
+    "    \n",
+    "spoken_languages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#list comprehension\n",
     "[genre[\"name\"] for genre in movie_response_all_dets[\"genres\"]]\n",
@@ -2888,102 +2926,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'adult': False,\n",
-       " 'backdrop_path': '/30COvn7g7PP58wBkrnnh7Ws9bJS.jpg',\n",
-       " 'belongs_to_collection': None,\n",
-       " 'budget': 0,\n",
-       " 'genres': [{'id': 10749, 'name': 'Romance'}, {'id': 35, 'name': 'Comedy'}],\n",
-       " 'homepage': '',\n",
-       " 'id': 828613,\n",
-       " 'imdb_id': 'tt14456350',\n",
-       " 'original_language': 'en',\n",
-       " 'original_title': 'About Fate',\n",
-       " 'overview': \"Two strangers believe in love but never seem to be able to find its true meaning. In a wild twist of events, fate puts each in the other's path on one stormy New Year's Eve.\",\n",
-       " 'popularity': 20.384,\n",
-       " 'poster_path': '/fabZkaVHYJ67KbZx7oFoitauX34.jpg',\n",
-       " 'production_companies': [{'id': 11006,\n",
-       "   'logo_path': None,\n",
-       "   'name': 'Aldamisa Entertainment',\n",
-       "   'origin_country': 'US'},\n",
-       "  {'id': 188745,\n",
-       "   'logo_path': '/iun7EGDo1Z8UkJigWhsLyO7ffF5.png',\n",
-       "   'name': 'American International Pictures (AIP)',\n",
-       "   'origin_country': 'US'},\n",
-       "  {'id': 188746,\n",
-       "   'logo_path': None,\n",
-       "   'name': 'Contentious Media',\n",
-       "   'origin_country': 'US'},\n",
-       "  {'id': 17929,\n",
-       "   'logo_path': None,\n",
-       "   'name': 'Vincent Newman Entertainment',\n",
-       "   'origin_country': 'US'}],\n",
-       " 'production_countries': [{'iso_3166_1': 'US',\n",
-       "   'name': 'United States of America'}],\n",
-       " 'release_date': '2022-09-08',\n",
-       " 'revenue': 0,\n",
-       " 'runtime': 100,\n",
-       " 'spoken_languages': [{'english_name': 'English',\n",
-       "   'iso_639_1': 'en',\n",
-       "   'name': 'English'}],\n",
-       " 'status': 'Released',\n",
-       " 'tagline': 'Love appears where you least expect it.',\n",
-       " 'title': 'About Fate',\n",
-       " 'video': False,\n",
-       " 'vote_average': 7.447,\n",
-       " 'vote_count': 276}"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "movie_response_all_dets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tmdb_movies_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test that movie_id list populated\n",
     "movie_id"
@@ -3094,20 +3057,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tmdb_movies_list"
    ]
